# Interpreter

./: CMakeLists.txt  README.md  asm.s  file_creator.py  input.txt  main.cpp
examples/Fibonacci/: Fibonacci.s
examples/helloWorld/: helloWorld.bc  helloWorld.s
src/compiler/: compiler.cpp  compiler.hpp
src/configs/: defs.hpp  instructions.hpp  regs.hpp
src/file/: header.hpp
src/mappers/: call.cpp  call.hpp  cond_mappers.hpp  int_mappers.cpp  int_mappers.hpp  memory.hpp
src/parse/: opcode.cpp  opcode.hpp  tmp
src/runtime/: machine.cpp  machine.hpp
src/utils/: files.cpp  files.hpp
